--- a/ehotel/public/client-dashboard.html
+++ b/ehotel/public/client-dashboard.html
@@ -42,8 +42,9 @@
   <div class="dashboard">
     <h1>Welcome to Your Client Dashboard</h1>
     <p>As a client, you can explore our available hotel rooms, view your reservations, and more.</p>
-    <button onclick="window.location.href='/view-reservations'">View Your Reservations</button>
-    <button onclick="window.location.href='/new-reservation'">Make a New Reservation</button>
+    <button onclick="window.location.href='/view-reservations.html'">View Your Reservations</button>
+    <button onclick="window.location.href='/select-hotel.html'">Make a New Reservation</button>
+    <a href="/update-client" class="button">Update My Information</a>
     <br/><br/>
     <a href="/logout">Logout</a>
   </div>
