--- a/ehotel/public/client-login.html
+++ b/ehotel/public/client-login.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Employee Login</h2>
+    <h2>Client Login</h2>
     <form method="POST" action="/client-login">
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="sin" placeholder="SIN" required />
