--- a/ehotel/public/index.html
+++ b/ehotel/public/index.html
@@ -40,6 +40,8 @@
 <body>
   <h1>Welcome to e-hotel</h1>
   <div class="buttons">
+    <button class="btn" onclick="location.href='/employee-signup'">Employee Sign Up</button>
+    <button class="btn" onclick="location.href='/client-signup'">Client Sign Up</button>
     <button class="btn" onclick="location.href='/employee-login'">Employee Login</button>
     <button class="btn" onclick="location.href='/client-login'">Client Login</button>
   </div>
